# toy-lang-compiler

./: .gitignore  README.md  metrics.md
src/: CMakeLists.txt  main.cpp  visitor.h
src/AST/: arraydecl.cpp  arraydecl.h  arrayref.h  assignment.cpp  assignment.h  ast.h  binary.cpp  binary.h  boolean.cpp  boolean.h  booleantype.h  cast.cpp  cast.h  expression.h  for.cpp  for.h  if.h  integer.cpp  integer.h  integertype.h  namedref.h  node.h  program.h  prototype.cpp  prototype.h  real.cpp  real.h  realtype.h  recorddecl.h  recordref.h  ref.h  return.cpp  return.h  routine.cpp  routine.h  routinecall.cpp  routinecall.h  sign.h  statements.h  type.h  (+10 more)
src/codegen/: codegen_visitor.cpp  codegen_visitor.h  driver.h
src/lib/: argparse-nortti.hpp
src/parsing/: Errors.cpp  Errors.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/semantical_analysis/: alias_unwrap_visitor.cpp  alias_unwrap_visitor.h  const_eval_visitor.cpp  const_eval_visitor.h  error.cpp  error.h  printname_visitor.cpp  printname_visitor.h  semantic_visitor.h  typechecking_visitor.cpp  typechecking_visitor.h  typededuce_visitor.cpp  typededuce_visitor.h
test/: distance.voc  euclid.voc  inplace_sort.voc
test/microtests/: main.c  microtests.vo  readme.txt  run-microtests.sh  test_out.o.boot.cpp
